syntax = "proto3";

package randomPackage;

service Random {
  rpc Chat(stream ChatRequest) returns (stream ChatResponse) {};
}

message ChatRequest {
  string message = 1;
}

message ChatResponse {
  string username = 1;
  string message = 2;
}